--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -18,6 +18,7 @@
         
         <p id="p1"></p>
         <p id="p2"></p>
+        <p id="button"></p>
         </center>
         
        <script src="Project.js"></script>
