--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -19,6 +19,9 @@
         <p id="p1"></p>
         <p id="p2"></p>
         <p id="button"></p>
+        <p id="form"> </p>
+        <p id="sent"></p>
+        <p id="reform" style="visibility: hidden;">Re-form the sentence</p>
         </center>
         
        <script src="Project.js"></script>
