Functionality of 'Re-form the sentence' button

--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -4,6 +4,7 @@
         <title>Unit-4</title>
         <link rel="stylesheet" href="Project.css">
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <h3 id="change">Experiment</h3>
@@ -15,13 +16,15 @@
             <option id="hin">Hindi</option>
         </select>
         <br>
+        <br>
+        <br>
         
         <p id="p1"></p>
         <p id="p2"></p>
         <p id="button"></p>
         <p id="form"> </p>
         <p id="sent"></p>
-        <p id="reform" style="visibility: hidden;">Re-form the sentence</p>
+        <button id="reform" onclick="reform()" style="visibility: hidden;width: 150px;">Re-form the sentence</button>
         </center>
         
        <script src="Project.js"></script>
