Check correctness button

--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -24,7 +24,9 @@
         <p id="button"></p>
         <p id="form"> </p>
         <p id="sent"></p>
-        <button id="reform" onclick="reform()" style="visibility: hidden;width: 150px;">Re-form the sentence</button>
+    
+        <button id="reform" onclick="reform()" style="visibility: hidden;width: 150px;">Re-form the sentence</button><br>
+        <button id="correct" style="width: 250px;visibility: hidden;">Check the correctness of this sentence</button>
         </center>
         
        <script src="Project.js"></script>
