--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -26,7 +26,10 @@
         <p id="sent"></p>
     
         <button id="reform" onclick="reform()" style="visibility: hidden;width: 150px;">Re-form the sentence</button><br>
-        <button id="correct" style="width: 250px;visibility: hidden;">Check the correctness of this sentence</button>
+        <br>
+        <button id="correct" onclick="correctness()" style="width: 250px;visibility: hidden;">Check the correctness of this sentence</button>
+        <p id="ans"></p>
+        <button id="getans" style="width: 180px;visibility: hidden;">Get Correct Answer</button>
         </center>
         
        <script src="Project.js"></script>
