Get correct sentence

--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -22,14 +22,18 @@
         <p id="p1"></p>
         <p id="p2"></p>
         <p id="button"></p>
-        <p id="form"> </p>
+        <br>
+        <br>
+        <p id="form"></p>
         <p id="sent"></p>
-    
         <button id="reform" onclick="reform()" style="visibility: hidden;width: 150px;">Re-form the sentence</button><br>
         <br>
         <button id="correct" onclick="correctness()" style="width: 250px;visibility: hidden;">Check the correctness of this sentence</button>
         <p id="ans"></p>
-        <button id="getans" style="width: 180px;visibility: hidden;">Get Correct Answer</button>
+        <button id="getans" onclick="answer()" style="width: 180px;visibility: hidden;">Get Correct Sentence</button>
+        <br>
+        <br>
+        <p id="answer"></p>
         </center>
         
        <script src="Project.js"></script>
