--- a/RDIP/Codes/Project.html
+++ b/RDIP/Codes/Project.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="Project.css">
         <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Sans&display=swap" rel="stylesheet">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     </head>
     <body>
         <h3 id="change">Experiment</h3>
@@ -30,6 +31,7 @@
         <br>
         <button id="correct" onclick="correctness()" style="width: 250px;visibility: hidden;">Check the correctness of this sentence</button>
         <p id="ans"></p>
+        <br>
         <button id="getans" onclick="answer()" style="width: 180px;visibility: hidden;">Get Correct Sentence</button>
         <br>
         <br>
